--- a/WeakestLink-GameShow-Vb/WeakestLink-GameShow-Vb.vbproj
+++ b/WeakestLink-GameShow-Vb/WeakestLink-GameShow-Vb.vbproj
@@ -47,11 +47,18 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data">
-      <HintPath>..\..\..\..\..\..\vladimir.efremov\Desktop\WWTBAM-Macedonia (16 9 Aspect) un-limited 15Q (1080p) CASPAR CG+ easyOper\MK WWTBAM\MK WWTBAM\bin\x86\Debug\MySql.Data.dll</HintPath>
+    <Reference Include="Interop.WMPLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>References\Interop.WMPLib.dll</HintPath>
     </Reference>
-    <Reference Include="Svt.Caspar">
-      <HintPath>..\..\..\..\..\..\vladimir.efremov\Desktop\WWTBAM-Macedonia (16 9 Aspect) un-limited 15Q (1080p) CASPAR CG+ easyOper\MK WWTBAM\MK WWTBAM\bin\x86\Debug\Svt.Caspar.dll</HintPath>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Svt.Caspar, Version=1.1.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\Svt.Caspar.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -141,15 +148,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="WMPLib">
-      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
+    <Content Include="References\AxInterop.ShockwaveFlashObjects.dll" />
+    <Content Include="References\AxInterop.WMPLib.dll" />
+    <Content Include="References\Interop.ShockwaveFlashObjects.dll" />
+    <Content Include="References\Interop.WMPLib.dll" />
+    <Content Include="References\Microsoft.Build.Utilities.v3.5.dll" />
+    <Content Include="References\MySql.Data.dll" />
+    <Content Include="References\Svt.Caspar.Controls.dll" />
+    <Content Include="References\Svt.Caspar.dll" />
+    <Content Include="References\Svt.Network.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
