--- a/WeakestLink-GameShow-Vb/App.config
+++ b/WeakestLink-GameShow-Vb/App.config
@@ -22,6 +22,9 @@
             <setting name="headToHeadmoneyTreeFlashTempl" serializeAs="String">
                 <value>weakestLink/WeakestLinkFinal_v1</value>
             </setting>
+            <setting name="DatabaseType" serializeAs="String">
+                <value>Mock</value>
+            </setting>
         </WeakestLink_GameShow_Vb.My.MySettings>
     </userSettings>
 </configuration>
